[gd_scene load_steps=15 format=3 uid="uid://bm4b4ym7jb7qw"]

[ext_resource type="Script" path="res://level_passed_screen.gd" id="1_euf83"]
[ext_resource type="Texture2D" uid="uid://dx047h4hxgxbs" path="res://assets/ninja/HUD/NinePathRect/DialogueBubble.png" id="2_up1lv"]
[ext_resource type="FontFile" uid="uid://catldy6ebh5mn" path="res://assets/ninja/HUD/Font/NormalFont.ttf" id="3_1ch58"]
[ext_resource type="AudioStream" uid="uid://dx8ymc8otqyv6" path="res://assets/ninja/Sounds/Menu/Menu2.wav" id="4_qd1bq"]
[ext_resource type="AudioStream" uid="uid://cioxl28q86chx" path="res://assets/ninja/Sounds/Menu/Menu1.wav" id="5_7ud6t"]
[ext_resource type="AudioStream" uid="uid://dwjn4mp7vhj2d" path="res://assets/ninja/Sounds/Game/Gold3.wav" id="6_ytd6k"]
[ext_resource type="AudioStream" uid="uid://cwdnpdo2lo2fr" path="res://assets/ninja/Sounds/Game/Gold2.wav" id="7_khuk7"]
[ext_resource type="AudioStream" uid="uid://b55hcc1j0h658" path="res://assets/ninja/Sounds/Game/Gold1.wav" id="8_m4c57"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ujwua"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.1, 0.1, 0.1, 0.3)
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8mhkh"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(1, 1, 1, 0.75)
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_detail = 5
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i7qjl"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.225, 0.225, 0.225, 0.6)
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3n736"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.1, 0.1, 0.1, 0.6)
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ha7sc"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0, 0, 0, 0.6)
corner_detail = 5

[sub_resource type="Theme" id="Theme_ct66o"]
default_font = ExtResource("3_1ch58")
default_font_size = 9
Button/colors/font_color = Color(0.875, 0.875, 0.875, 1)
Button/colors/font_disabled_color = Color(0.875, 0.875, 0.875, 0.5)
Button/colors/font_focus_color = Color(0.95, 0.95, 0.95, 1)
Button/colors/font_hover_color = Color(0.95, 0.95, 0.95, 1)
Button/colors/font_hover_pressed_color = Color(1, 1, 1, 1)
Button/colors/font_outline_color = Color(1, 1, 1, 1)
Button/colors/font_pressed_color = Color(1, 1, 1, 1)
Button/colors/icon_disabled_color = Color(1, 1, 1, 0.4)
Button/colors/icon_focus_color = Color(1, 1, 1, 1)
Button/colors/icon_hover_color = Color(1, 1, 1, 1)
Button/colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
Button/colors/icon_normal_color = Color(1, 1, 1, 1)
Button/colors/icon_pressed_color = Color(1, 1, 1, 1)
Button/constants/h_separation = 2
Button/constants/outline_size = 0
Button/styles/disabled = SubResource("StyleBoxFlat_ujwua")
Button/styles/focus = SubResource("StyleBoxFlat_8mhkh")
Button/styles/hover = SubResource("StyleBoxFlat_i7qjl")
Button/styles/normal = SubResource("StyleBoxFlat_3n736")
Button/styles/pressed = SubResource("StyleBoxFlat_ha7sc")

[node name="LevelPassedScreen" type="CanvasLayer"]
layer = 2
script = ExtResource("1_euf83")

[node name="Darken" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
offset_right = 320.0
offset_bottom = 192.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="NinePatchRect" type="NinePatchRect" parent="."]
clip_children = 2
offset_left = 104.0
offset_top = -152.0
offset_right = 216.0
offset_bottom = -8.0
texture = ExtResource("2_up1lv")
patch_margin_left = 7
patch_margin_top = 7
patch_margin_right = 7
patch_margin_bottom = 7

[node name="GoalLabel" type="Label" parent="NinePatchRect"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 104.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_1ch58")
theme_override_font_sizes/font_size = 18
text = "GOAL!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="KillsLabel" type="Label" parent="NinePatchRect"]
layout_mode = 0
offset_left = -112.0
offset_top = 48.0
offset_bottom = 64.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_1ch58")
theme_override_font_sizes/font_size = 9
text = "KILLS: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MovesLabel" type="Label" parent="NinePatchRect"]
layout_mode = 0
offset_left = -112.0
offset_top = 64.0
offset_bottom = 80.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_1ch58")
theme_override_font_sizes/font_size = 9
text = "MOVES: 999"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SushiLabel" type="Label" parent="NinePatchRect"]
layout_mode = 0
offset_left = -112.0
offset_top = 80.0
offset_bottom = 96.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_1ch58")
theme_override_font_sizes/font_size = 9
text = "SUSHI: 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ContinueButton" type="Button" parent="NinePatchRect"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 0
offset_left = 16.0
offset_top = 112.0
offset_right = 96.0
offset_bottom = 132.0
theme = SubResource("Theme_ct66o")
disabled = true
text = "CONTINUE"

[node name="Start" type="Marker2D" parent="."]
position = Vector2(104, -152)

[node name="End" type="Marker2D" parent="."]
position = Vector2(104, 24)

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_qd1bq")
bus = &"sound"

[node name="Focus" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_7ud6t")
volume_db = -15.0
bus = &"sound"

[node name="Appear1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_ytd6k")
bus = &"sound"

[node name="Appear2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_khuk7")
bus = &"sound"

[node name="Appear3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_m4c57")
bus = &"sound"

[connection signal="button_down" from="NinePatchRect/ContinueButton" to="." method="_on_continue_button_button_down"]
[connection signal="focus_entered" from="NinePatchRect/ContinueButton" to="." method="_on_continue_button_focus_entered"]
[connection signal="mouse_entered" from="NinePatchRect/ContinueButton" to="." method="_on_continue_button_mouse_entered"]
